load("@rules_nodejs//nodejs:repositories.bzl", "node_repositories")

nodejs_repositories(
      node_version = "22.2.0",
        node_repositories = {
            "22.2.0-linux-x64": ("node-v22.2.0-linux-x64.tar.xz", "node-v22.2.0-linux-x64")
        },
        node_urls = ["https://nodejs.org/dist/v22.2.0/node-v22.2.0-linux-x64.tar.xz"]
)